--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": " ",
   "main": "index.js",
   "scripts": {
-    "start": "SET DEBUG=order:* & SET NODE_ENV=prod & node index.js",
-    "dev": "SET DEBUG=order:* & SET NODE_ENV=dev & nodemon index.js",
+    "start": "SET DEBUG=order:* & SET NODE_ENV=production & node index.js",
+    "dev": "SET DEBUG=order:* & SET NODE_ENV=development & nodemon index.js",
     "lint-fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
     "pg": "^8.11.3"
   },
