--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
     "knex": "^3.0.1",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
-    "string-template": "^1.0.0"
+    "string-template": "^1.0.0",
+    "swagger-ui-express": "^5.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^8.51.0",
