--- a/server/src/api.yaml
+++ b/server/src/api.yaml
@@ -98,6 +98,46 @@ paths:
       - Books
       summary: Get Books List
       description: "Authorized user can listing Books"
+      parameters:
+        - name: limit
+          in: query
+          description: Limit the number of results
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+        - name: page
+          in: query
+          description: Offset the results by a certain number
+          required: false
+          schema:
+            type: integer
+            minimum: 0
+        - name: title
+          in: query
+          description: Title of the book
+          required: false
+          schema:
+            type: string
+        - name: author
+          in: query
+          description: Author of the book
+          required: false
+          schema:
+            type: string
+        - name: maxPrice
+          in: query
+          description: maxPrice of the book
+          required: false
+          schema:
+            type: integer
+        - name: minPrice
+          in: query
+          description: minPrice of the book
+          required: false
+          schema:
+            type: integer
       security:
         - bearerAuth: []
       responses:
@@ -105,6 +145,31 @@ paths:
           description: 'Fetch Book List Successfull'
         401:
           description: 'Unauthorized'
+        500:
+          description: 'Internal Server Error'
+  
+  /books/{id}:
+    put:
+      tags:
+      - Books
+      summary: Updating Book for Sale
+      description: "Update Book by Admin"
+      parameters:
+        - name: id
+          in: path
+          schema:
+            type: string
+      requestBody:
+        description: 'Payload for Update Book'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Add_Book_Payload'
+      responses:
+        200:
+          description: 'Updating Book Successfull'
+        400:
+          description: 'Bad Request'
         500:
           description: 'Internal Server Error'
 
